@@ -160,19 +160,19 @@ class BottariTemplateServiceTest {
 
             // then
             assertAll(() -> {
-                          assertThat(actual).hasSize(2);
-                          assertThat(actual.get(0).title()).isEqualTo(memberTemplate2.getTitle());
-                          assertThat(actual.get(0).items()).hasSize(1);
-                          assertThat(actual.get(0).items().getFirst().name()).isEqualTo(item3.getName());
-                          assertThat(actual.get(0).hashtags()).hasSize(1);
-                          assertThat(actual.get(0).hashtags().getFirst().name()).isEqualTo(hashtag2.getName());
-                          assertThat(actual.get(1).title()).isEqualTo(memberTemplate1.getTitle());
-                          assertThat(actual.get(1).items()).hasSize(2);
-                          assertThat(actual.get(1).items().get(0).name()).isEqualTo(item1.getName());
-                          assertThat(actual.get(1).items().get(1).name()).isEqualTo(item2.getName());
-                          assertThat(actual.get(1).hashtags()).hasSize(1);
-                          assertThat(actual.get(1).hashtags().getFirst().name()).isEqualTo(hashtag1.getName());
-                      }
+                        assertThat(actual).hasSize(2);
+                        assertThat(actual.get(0).title()).isEqualTo(memberTemplate2.getTitle());
+                        assertThat(actual.get(0).items()).hasSize(1);
+                        assertThat(actual.get(0).items().getFirst().name()).isEqualTo(item3.getName());
+                        assertThat(actual.get(0).hashtags()).hasSize(1);
+                        assertThat(actual.get(0).hashtags().getFirst().name()).isEqualTo(hashtag2.getName());
+                        assertThat(actual.get(1).title()).isEqualTo(memberTemplate1.getTitle());
+                        assertThat(actual.get(1).items()).hasSize(2);
+                        assertThat(actual.get(1).items().get(0).name()).isEqualTo(item1.getName());
+                        assertThat(actual.get(1).items().get(1).name()).isEqualTo(item2.getName());
+                        assertThat(actual.get(1).hashtags()).hasSize(1);
+                        assertThat(actual.get(1).hashtags().getFirst().name()).isEqualTo(hashtag1.getName());
+                    }
             );
         }
 
@@ -270,7 +270,7 @@ class BottariTemplateServiceTest {
             entityManager.persist(hashtag2);
             entityManager.persist(templateHashtag2);
 
-            final BottariTemplate template3 = new BottariTemplate("subject", member);
+            final BottariTemplate template3 = new BottariTemplate("subject", "description", member);
             final BottariTemplateItem item4 = BottariTemplateItemFixture.BOTTARI_TEMPLATE_ITEM_4.get(template3);
             final Hashtag hashtag3 = HashtagFixture.HASHTAG_3.get();
             final BottariTemplateHashtag templateHashtag3 = new BottariTemplateHashtag(template3, hashtag3);
@@ -323,9 +323,9 @@ class BottariTemplateServiceTest {
             final Member member = new Member("ssaid", "name");
             entityManager.persist(member);
 
-            final BottariTemplate template1 = new BottariTemplate("template1", member);
-            final BottariTemplate template2 = new BottariTemplate("template2", member);
-            final BottariTemplate template3 = new BottariTemplate("template3", member);
+            final BottariTemplate template1 = new BottariTemplate("template1", "description1", member);
+            final BottariTemplate template2 = new BottariTemplate("template2", "description2", member);
+            final BottariTemplate template3 = new BottariTemplate("template3", "description3", member);
             entityManager.persist(template1);
             entityManager.persist(template2);
             entityManager.persist(template3);
@@ -389,8 +389,8 @@ class BottariTemplateServiceTest {
             final Member member = new Member("ssaid", "name");
             entityManager.persist(member);
 
-            final BottariTemplate template1 = new BottariTemplate("template1", member);
-            final BottariTemplate template2 = new BottariTemplate("template2", member);
+            final BottariTemplate template1 = new BottariTemplate("template1", "description1", member);
+            final BottariTemplate template2 = new BottariTemplate("template2", "description2", member);
             entityManager.persist(template1);
             entityManager.persist(template2);
 
@@ -444,9 +444,9 @@ class BottariTemplateServiceTest {
             final Member member = new Member("ssaid", "name");
             entityManager.persist(member);
 
-            final BottariTemplate template1 = new BottariTemplate("여행용 체크리스트", member);
-            final BottariTemplate template2 = new BottariTemplate("캠핑 준비물", member);
-            final BottariTemplate template3 = new BottariTemplate("출장 체크리스트", member);
+            final BottariTemplate template1 = new BottariTemplate("여행용 체크리스트", "여행용", member);
+            final BottariTemplate template2 = new BottariTemplate("캠핑 준비물", "캠핑용", member);
+            final BottariTemplate template3 = new BottariTemplate("출장 체크리스트", "출장용", member);
             entityManager.persist(template1);
             entityManager.persist(template2);
             entityManager.persist(template3);
@@ -544,9 +544,9 @@ class BottariTemplateServiceTest {
             final Member member = new Member("ssaid", "name");
             entityManager.persist(member);
 
-            final BottariTemplate template1 = new BottariTemplate("template1", member);
-            final BottariTemplate template2 = new BottariTemplate("template2", member);
-            final BottariTemplate template3 = new BottariTemplate("template3", member);
+            final BottariTemplate template1 = new BottariTemplate("template1", "description1", member);
+            final BottariTemplate template2 = new BottariTemplate("template2", "description2", member);
+            final BottariTemplate template3 = new BottariTemplate("template3", "description3", member);
             entityManager.persist(template1);
             entityManager.persist(template2);
             entityManager.persist(template3);
@@ -614,17 +614,17 @@ class BottariTemplateServiceTest {
             final Member member = new Member("ssaid", "name");
             entityManager.persist(member);
 
-            final BottariTemplate template1 = new BottariTemplate("template1", member);
-            final BottariTemplate template2 = new BottariTemplate("template2", member);
-            final BottariTemplate template3 = new BottariTemplate("template3", member);
+            final BottariTemplate template1 = new BottariTemplate("template1", "description1", member);
+            final BottariTemplate template2 = new BottariTemplate("template2", "description2", member);
+            final BottariTemplate template3 = new BottariTemplate("template3", "description3", member);
             entityManager.persist(template1);
             entityManager.persist(template2);
             entityManager.persist(template3);
             entityManager.createQuery("""
-                    UPDATE BottariTemplate bt
-                    SET bt.takenCount = bt.takenCount + 1
-                    WHERE bt.id = :id
-            """)
+                                    UPDATE BottariTemplate bt
+                                    SET bt.takenCount = bt.takenCount + 1
+                                    WHERE bt.id = :id
+                            """)
                     .setParameter("id", template2.getId())
                     .executeUpdate();
 
@@ -711,7 +711,9 @@ class BottariTemplateServiceTest {
             final List<String> bottariTemplateItems = List.of("item1", "item2", "item3");
             final CreateBottariTemplateRequest request = new CreateBottariTemplateRequest(
                     "title",
-                    bottariTemplateItems
+                    "description",
+                    bottariTemplateItems,
+                    List.of()
             );
 
             // when
@@ -719,11 +721,11 @@ class BottariTemplateServiceTest {
 
             // then
             final List<BottariTemplateItem> actualItems = entityManager.createQuery(
-            """
-                  SELECT i
-                  FROM BottariTemplateItem i
-                  WHERE i.bottariTemplate.id =: bottariTemplateId
-             """, BottariTemplateItem.class)
+                            """
+                                         SELECT i
+                                         FROM BottariTemplateItem i
+                                         WHERE i.bottariTemplate.id =: bottariTemplateId
+                                    """, BottariTemplateItem.class)
                     .setParameter("bottariTemplateId", actual)
                     .getResultList();
 
@@ -734,6 +736,171 @@ class BottariTemplateServiceTest {
             );
         }
 
+        @DisplayName("보따리 템플릿 생성 시, 새로운 해시태그들을 함께 생성한다.")
+        @Test
+        void create_WithNewHashtags() {
+            // given
+            final Member member = MemberFixture.MEMBER.get();
+            entityManager.persist(member);
+
+            final List<String> hashtagNames = List.of("여행", "준비물");
+            final CreateBottariTemplateRequest request = new CreateBottariTemplateRequest(
+                    "title",
+                    "description",
+                    List.of("item1"),
+                    hashtagNames
+            );
+
+            // when
+            final Long bottariTemplateId = bottariTemplateService.create(member.getSsaid(), request);
+
+            // then
+            final List<Hashtag> actualHashtags = entityManager.createQuery(
+                            "SELECT h FROM Hashtag h", Hashtag.class)
+                    .getResultList();
+            final List<BottariTemplateHashtag> actualMappings = entityManager.createQuery(
+                            "SELECT bth FROM BottariTemplateHashtag bth WHERE bth.bottariTemplate.id = :templateId",
+                            BottariTemplateHashtag.class)
+                    .setParameter("templateId", bottariTemplateId)
+                    .getResultList();
+
+            assertAll(
+                    () -> assertThat(actualHashtags).hasSize(2),
+                    () -> assertThat(actualHashtags).extracting("name").containsExactlyInAnyOrder("여행", "준비물"),
+                    () -> assertThat(actualMappings).hasSize(2)
+            );
+        }
+
+        @DisplayName("요청에 중복된 해시태그가 있는 경우, 예외를 던진다.")
+        @Test
+        void create_Exception_DuplicateHashtagsInRequest() {
+            // given
+            final Member member = MemberFixture.MEMBER.get();
+            entityManager.persist(member);
+
+            final List<String> hashtagNames = List.of("여행", "여행", "준비물");
+            final CreateBottariTemplateRequest request = new CreateBottariTemplateRequest(
+                    "title",
+                    "description",
+                    List.of("item1"),
+                    hashtagNames
+            );
+
+            // when & then
+            assertThatThrownBy(() -> bottariTemplateService.create(member.getSsaid(), request))
+                    .isInstanceOf(BusinessException.class)
+                    .hasMessage("요청에 중복된 해시태그가 있습니다.");
+        }
+
+        @DisplayName("해시태그 10개 초과 시, 예외를 던진다.")
+        @Test
+        void create_Exception_ExceedHashtagLimit() {
+            // given
+            final Member member = MemberFixture.MEMBER.get();
+            entityManager.persist(member);
+
+            final List<String> hashtagNames = List.of(
+                    "해시태그1", "해시태그2", "해시태그3", "해시태그4", "해시태그5",
+                    "해시태그6", "해시태그7", "해시태그8", "해시태그9", "해시태그10",
+                    "해시태그11"
+            );
+            final CreateBottariTemplateRequest request = new CreateBottariTemplateRequest(
+                    "title",
+                    "description",
+                    List.of("item1"),
+                    hashtagNames
+            );
+
+            // when & then
+            assertThatThrownBy(() -> bottariTemplateService.create(member.getSsaid(), request))
+                    .isInstanceOf(BusinessException.class)
+                    .hasMessage("해시태그가 너무 많습니다. - 최대 10개까지 입력 가능합니다.");
+        }
+
+        @DisplayName("보따리 템플릿 생성 시, 기존에 존재하는 해시태그를 재사용한다.")
+        @Test
+        void create_WithExistingHashtags() {
+            // given
+            final Member member = MemberFixture.MEMBER.get();
+            entityManager.persist(member);
+
+            final Hashtag existingHashtag1 = new Hashtag("여행");
+            final Hashtag existingHashtag2 = new Hashtag("필수템");
+            entityManager.persist(existingHashtag1);
+            entityManager.persist(existingHashtag2);
+
+            final long initialHashtagCount = entityManager.createQuery("SELECT COUNT(h) FROM Hashtag h", Long.class)
+                    .getSingleResult();
+
+            final List<String> hashtagNames = List.of("여행", "필수템");
+            final CreateBottariTemplateRequest request = new CreateBottariTemplateRequest(
+                    "title",
+                    "description",
+                    List.of("item1"),
+                    hashtagNames
+            );
+
+            // when
+            final Long bottariTemplateId = bottariTemplateService.create(member.getSsaid(), request);
+
+            // then
+            final long finalHashtagCount = entityManager.createQuery("SELECT COUNT(h) FROM Hashtag h", Long.class)
+                    .getSingleResult();
+            final List<BottariTemplateHashtag> actualMappings = entityManager.createQuery(
+                            "SELECT bth FROM BottariTemplateHashtag bth WHERE bth.bottariTemplate.id = :templateId",
+                            BottariTemplateHashtag.class)
+                    .setParameter("templateId", bottariTemplateId)
+                    .getResultList();
+
+            assertAll(
+                    () -> assertThat(finalHashtagCount).isEqualTo(initialHashtagCount),
+                    () -> assertThat(actualMappings).hasSize(2),
+                    () -> assertThat(actualMappings).extracting(m -> m.getHashtag().getName())
+                            .containsExactlyInAnyOrder("여행", "필수템")
+            );
+        }
+
+        @DisplayName("보따리 템플릿 생성 시, 새로운 해시태그와 기존 해시태그를 함께 처리한다.")
+        @Test
+        void create_WithMixedHashtags() {
+            // given
+            final Member member = MemberFixture.MEMBER.get();
+            entityManager.persist(member);
+
+            final Hashtag existingHashtag = new Hashtag("여행");
+            entityManager.persist(existingHashtag);
+
+            final long initialHashtagCount = entityManager.createQuery("SELECT COUNT(h) FROM Hashtag h", Long.class)
+                    .getSingleResult(); // 1
+
+            final List<String> hashtagNames = List.of("여행", "쇼핑");
+            final CreateBottariTemplateRequest request = new CreateBottariTemplateRequest(
+                    "title",
+                    "description",
+                    List.of("item1"),
+                    hashtagNames
+            );
+
+            // when
+            final Long bottariTemplateId = bottariTemplateService.create(member.getSsaid(), request);
+
+            // then
+            final long finalHashtagCount = entityManager.createQuery("SELECT COUNT(h) FROM Hashtag h", Long.class)
+                    .getSingleResult();
+            final List<BottariTemplateHashtag> actualMappings = entityManager.createQuery(
+                            "SELECT bth FROM BottariTemplateHashtag bth WHERE bth.bottariTemplate.id = :templateId",
+                            BottariTemplateHashtag.class)
+                    .setParameter("templateId", bottariTemplateId)
+                    .getResultList();
+
+            assertAll(
+                    () -> assertThat(finalHashtagCount).isEqualTo(initialHashtagCount + 1),
+                    () -> assertThat(actualMappings).hasSize(2),
+                    () -> assertThat(actualMappings).extracting(m -> m.getHashtag().getName())
+                            .containsExactlyInAnyOrder("여행", "쇼핑")
+            );
+        }
+
         @DisplayName("생성 시 존재하지 않는 사용자라면, 예외를 던진다.")
         @Test
         void create_Exception_NotExistsMember() {
@@ -741,7 +908,9 @@ class BottariTemplateServiceTest {
             final List<String> bottariTemplateItems = List.of("item1", "item2", "item3");
             final CreateBottariTemplateRequest request = new CreateBottariTemplateRequest(
                     "title",
-                    bottariTemplateItems
+                    "description",
+                    bottariTemplateItems,
+                    List.of()
             );
             final String invalidSsaid = "invalid_ssaid";
 
@@ -761,7 +930,9 @@ class BottariTemplateServiceTest {
             final List<String> bottariTemplateItems = List.of("item1", "duplicate_item", "duplicate_item");
             final CreateBottariTemplateRequest request = new CreateBottariTemplateRequest(
                     "title",
-                    bottariTemplateItems
+                    "description",
+                    bottariTemplateItems,
+                    List.of()
             );
 
             // when & then
@@ -824,7 +995,7 @@ class BottariTemplateServiceTest {
             final Member templateOwner = new Member("owner_ssaid", "owner_name");
             entityManager.persist(templateOwner);
 
-            final BottariTemplate bottariTemplate = new BottariTemplate("title", templateOwner);
+            final BottariTemplate bottariTemplate = new BottariTemplate("title", "description", templateOwner);
             entityManager.persist(bottariTemplate);
 
             final BottariTemplateItem bottariTemplateItem1 = new BottariTemplateItem("item1", bottariTemplate);
@@ -841,12 +1012,12 @@ class BottariTemplateServiceTest {
 
             // then
             final BottariTemplateHistory acutalBottariTemplateHistory = entityManager.createQuery(
-            """
-                 SELECT bh
-                 FROM BottariTemplateHistory bh
-                 WHERE bh.id.memberId = :memberId
-                 AND bh.id.bottariTemplateId = :bottariTemplateId
-             """, BottariTemplateHistory.class)
+                            """
+                                        SELECT bh
+                                        FROM BottariTemplateHistory bh
+                                        WHERE bh.id.memberId = :memberId
+                                        AND bh.id.bottariTemplateId = :bottariTemplateId
+                                    """, BottariTemplateHistory.class)
                     .setParameter("memberId", member.getId())
                     .setParameter("bottariTemplateId", bottariTemplate.getId())
                     .getSingleResult();
@@ -865,7 +1036,7 @@ class BottariTemplateServiceTest {
             final Member templateOwner = new Member("owner_ssaid", "owner_name");
             entityManager.persist(templateOwner);
 
-            final BottariTemplate bottariTemplate = new BottariTemplate("title", templateOwner);
+            final BottariTemplate bottariTemplate = new BottariTemplate("title", "description", templateOwner);
             entityManager.persist(bottariTemplate);
 
             final BottariTemplateItem bottariTemplateItem1 = new BottariTemplateItem("item1", bottariTemplate);
@@ -882,13 +1053,12 @@ class BottariTemplateServiceTest {
             bottariTemplateService.createBottari(bottariTemplate.getId(), ssaid);
 
             // then
-            final Long actualHistoryCount = entityManager.createQuery(
-            """
-                       SELECT COUNT(bh)
-                       FROM BottariTemplateHistory bh
-                       WHERE bh.id.memberId = :memberId
-                       AND bh.id.bottariTemplateId = :bottariTemplateId
-            """, Long.class)
+            final Long actualHistoryCount = entityManager.createQuery("""
+                                               SELECT COUNT(bh)
+                                               FROM BottariTemplateHistory bh
+                                               WHERE bh.id.memberId = :memberId
+                                               AND bh.id.bottariTemplateId = :bottariTemplateId
+                                    """, Long.class)
                     .setParameter("memberId", member.getId())
                     .setParameter("bottariTemplateId", bottariTemplate.getId())
                     .getSingleResult();
